Found bang bang optimisation with money.

--- a/pde_calculator.ipynb
+++ b/pde_calculator.ipynb
@@ -31101,7 +31101,7 @@
    "cell_type": "code",
    "source": [
     "\n",
-    "net2 = WattsStrogatzNetwork.load_json('my_networks/ws1.json')\n",
+    "net2 = WattsStrogatzNetwork.load_json('my_networks/er.json')\n",
     "\n",
     "interest_calculator = networks.interest_calculator.InterestCalculator(r_p = lambda t: 0.1, r_r = data.interpolated_r_r)\n",
     "\n",
@@ -31160,6 +31160,14 @@
     }
    ],
    "execution_count": 61
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "net2.print",
+   "id": "cdec8641f8641580"
   },
   {
    "metadata": {
@@ -31272,8 +31280,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-28T01:12:40.087327Z",
-     "start_time": "2025-02-28T01:12:21.060489Z"
+     "end_time": "2025-03-02T22:04:38.022690Z",
+     "start_time": "2025-03-02T22:04:29.506037Z"
     }
    },
    "cell_type": "code",
@@ -31299,6 +31307,13 @@
    "id": "85ba1904d95dff90",
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YF.download() has changed argument auto_adjust default to True\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -31323,7 +31338,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 37
+   "execution_count": 1
   }
  ],
  "metadata": {
