--- a/pde.ipynb
+++ b/pde.ipynb
@@ -15,9 +15,9 @@
     "import numpy as np\n",
     "from scipy.integrate import solve_ivp, quad\n",
     "from scipy.interpolate import CubicSpline\n",
-    "from data import Data\n",
+    "from simulation.finance_data import FinanceData\n",
     "\n",
-    "dat = Data()\n",
+    "dat = FinanceData()\n",
     "dat.download()"
    ],
    "outputs": [
