--- a/pde_calculator.ipynb
+++ b/pde_calculator.ipynb
@@ -15,13 +15,12 @@
     "import differential_equations_2\n",
     "from differential_equations import DifferentialEquations\n",
     "from differential_equations_2 import DifferentialEquations2\n",
-    "from networks import Network, WattsStrogatzNetwork, BaNetwork\n",
-    "from ponzi_simulation import PonziSimulation\n",
-    "import networks.interest_calculator\n",
-    "from data import Data\n",
+    "from networks import WattsStrogatzNetwork, BaNetwork\n",
+    "from simulation.ponzi_simulation import PonziSimulation\n",
+    "import simulation.parameters_calculator\n",
+    "from simulation.finance_data import FinanceData\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import networks.network  # Ensure the submodule is directly importable\n",
     "\n",
     "import importlib"
    ],
@@ -30815,7 +30814,7 @@
     "    'capital_per_person': 0\n",
     "}\n",
     "#net2.set_parameters(parameters)\n",
-    "interest_calculator = networks.interest_calculator.InterestCalculator(r_p = lambda t: 0.1, r_r = lambda t: 0.05)\n",
+    "interest_calculator = simulation.parameters_calculator.InterestCalculator(rp= lambda t: 0.1, rr= lambda t: 0.05)\n",
     "\n"
    ],
    "id": "4ae23d849f067465",
@@ -30909,12 +30908,12 @@
    },
    "cell_type": "code",
    "source": [
-    "importlib.reload(networks.interest_calculator)\n",
+    "importlib.reload(simulation.parameters_calculator)\n",
     "#importlib.reload(DifferentialEquations)\n",
-    "data = Data()\n",
+    "data = FinanceData()\n",
     "data.download()\n",
     "\n",
-    "interest_calc_sp500 = networks.interest_calculator.InterestCalculator(r_p = lambda t: 0.1, r_r=lambda t: data.interpolated_r_r(t)*12)\n",
+    "interest_calc_sp500 = simulation.parameters_calculator.InterestCalculator(rp= lambda t: 0.1, rr=lambda t: data.interpolated_r_r(t) * 12)\n",
     "\n",
     "interest_calc_sp500.compute_market_positivity(0, 30, 100)\n",
     "\n",
@@ -30952,7 +30951,7 @@
    },
    "cell_type": "code",
    "source": [
-    "importlib.reload(networks.interest_calculator)\n",
+    "importlib.reload(simulation.parameters_calculator)\n",
     "\n",
     "\n",
     "plt.plot(np.linspace(0, 30), [interest_calc_sp500.mu_from_rr_func(max=0.5)(ti)for ti in np.linspace(0, 30)])\n",
@@ -31103,7 +31102,7 @@
     "\n",
     "net2 = WattsStrogatzNetwork.load_json('my_networks/er.json')\n",
     "\n",
-    "interest_calculator = networks.interest_calculator.InterestCalculator(r_p = lambda t: 0.1, r_r = data.interpolated_r_r)\n",
+    "interest_calculator = simulation.parameters_calculator.InterestCalculator(rp= lambda t: 0.1, rr= data.interpolated_r_r)\n",
     "\n",
     "ponzi = PonziSimulation(\n",
     "    network=net2,\n",
@@ -31205,9 +31204,9 @@
     "\n",
     "#net2 = BaNetwork.load_json('my_networks/ba1.json')\n",
     "\n",
-    "interest_calculator2 = networks.interest_calculator.InterestCalculator(r_p = lambda t: 0.15, r_r = lambda t: 0.05)\n",
+    "interest_calculator2 = simulation.parameters_calculator.InterestCalculator(rp= lambda t: 0.15, rr= lambda t: 0.05)\n",
     "\n",
-    "eq = DifferentialEquations2(N=10000, M=100, rp=interest_calculator.r_p, rr=interest_calculator.r_r, mu=lambda _:0.05, ponzi_capital=5000, lambda_ = lambda _: 0.02, avg_k=5)\n",
+    "eq = DifferentialEquations2(N=10000, M=100, rp=interest_calculator.rp, rr=interest_calculator.rr, mu=lambda _:0.05, ponzi_capital=5000, lambda_ = lambda _: 0.02, avg_k=5)\n",
     "eq.solve_densities(0, 30, 1000)\n",
     "eq.graph('asd')\n",
     "# ponzi = PonziSimulation(\n",
@@ -31287,18 +31286,18 @@
    "cell_type": "code",
    "source": [
     "from differential_equations_2 import DifferentialEquations2\n",
-    "from networks.interest_calculator import InterestCalculator\n",
-    "from data import Data\n",
-    "data = Data()\n",
+    "from simulation.parameters_calculator import InterestCalculator\n",
+    "from simulation.finance_data import FinanceData\n",
+    "data = FinanceData()\n",
     "data.download()\n",
-    "interest_calculator2 = InterestCalculator(r_p=lambda _: 0.1, r_r=data.interpolated_r_r)\n",
+    "interest_calculator2 = InterestCalculator(rp=lambda _: 0.1, rr=data.interpolated_r_r)\n",
     "\n",
     "interest_calculator2.compute_market_positivity(0, 30, 100)\n",
     "\n",
     "eq = DifferentialEquations2(\n",
     "    N=1000, M=100,\n",
     "    lambda_= lambda ti: interest_calculator2.lambda_from_rr_func(base=0.1, min=0, max=0.1, steepness=30)(ti) + 0.1, avg_k=5,\n",
-    "    mu =interest_calculator2.mu_from_rr_func(0.2, 0.1, 0.6, 150), rr=interest_calculator2.r_r, rp=lambda t: 0.1, ponzi_capital=0\n",
+    "    mu =interest_calculator2.mu_from_rr_func(0.2, 0.1, 0.6, 150), rr=interest_calculator2.rr, rp=lambda t: 0.1, ponzi_capital=0\n",
     ")\n",
     "\n",
     "eq.solve_densities(0, 30, 100)\n",
