--- a/test.ipynb
+++ b/test.ipynb
@@ -11,11 +11,11 @@
     }
    },
    "source": [
-    "import numpy as np\n",
-    "from networks.interest_calculator import InterestCalculator\n",
+    "\n",
+    "from simulation.parameters_calculator import InterestCalculator\n",
     "from networks.er_network import ErNetwork\n",
     "import matplotlib.pyplot as plt\n",
-    "from ponzi_simulation import PonziSimulation"
+    "from simulation.ponzi_simulation import PonziSimulation"
    ],
    "outputs": [],
    "execution_count": 1
@@ -87,7 +87,7 @@
    },
    "cell_type": "code",
    "source": [
-    "interest_calculator = InterestCalculator(r_p = lambda t: 0.1, r_r = lambda t: 0.05)\n",
+    "interest_calculator = InterestCalculator(rp= lambda t: 0.1, rr= lambda t: 0.05)\n",
     "\n",
     "ponzi = PonziSimulation(\n",
     "    network = erNet,\n",
@@ -162,8 +162,8 @@
     "from differential_equations_2 import DifferentialEquations2\n",
     "\n",
     "diff = DifferentialEquations2(\n",
-    "    rp = interest_calculator.r_p,\n",
-    "    rr = interest_calculator.r_r,\n",
+    "    rp = interest_calculator.rp,\n",
+    "    rr = interest_calculator.rr,\n",
     "    lambda_ = lambda t: 0.2,\n",
     "    mu = lambda t: 0.1,\n",
     "    M = 100,\n",
@@ -225,18 +225,16 @@
    },
    "cell_type": "code",
    "source": [
-    "from data import Data\n",
-    "import numpy as np\n",
-    "from networks.interest_calculator import InterestCalculator\n",
+    "from simulation.finance_data import FinanceData\n",
+    "from simulation.parameters_calculator import InterestCalculator\n",
     "from networks.er_network import ErNetwork\n",
-    "import matplotlib.pyplot as plt\n",
-    "from ponzi_simulation import PonziSimulation\n",
+    "from simulation.ponzi_simulation import PonziSimulation\n",
     "\n",
     "erNet = ErNetwork.load_json('my_networks/er2.json')\n",
-    "data = Data()\n",
+    "data = FinanceData()\n",
     "data.download()\n",
     "\n",
-    "interest_calculator = InterestCalculator(r_p = lambda t: 0.25, r_r = data.interpolated_r_r) #data.interpolated_r_r)\n",
+    "interest_calculator = InterestCalculator(rp= lambda t: 0.25, rr= data.interpolated_r_r) #data.interpolated_r_r)\n",
     "interest_calculator.compute_market_positivity(0, 30, 200)\n",
     "\n",
     "ponzi = PonziSimulation(\n",
