Sistemato Differential Equations.

--- a/pde_calculator.ipynb
+++ b/pde_calculator.ipynb
@@ -12,9 +12,8 @@
    },
    "source": [
     "\n",
-    "import differential_equations_2\n",
-    "from differential_equations import DifferentialEquations\n",
-    "from differential_equations_2 import DifferentialEquations2\n",
+    "from simulation import differential_equations\n",
+    "from simulation.differential_equations import DifferentialEquations\n",
     "from networks import WattsStrogatzNetwork, BaNetwork\n",
     "from simulation.ponzi_simulation import PonziSimulation\n",
     "import simulation.parameters_calculator\n",
@@ -38,11 +37,11 @@
    "source": [
     "importlib.reload(differential_equations_2)\n",
     "\n",
-    "eq = DifferentialEquations2(\n",
+    "eq = DifferentialEquations(\n",
     "    N=10000, M=100, lambda_= lambda t: 0.25, avg_k=5, mu = lambda t: 0.5, rr= lambda t: 0.1, rp=lambda t: 0.1, ponzi_capital=5000\n",
     ")\n",
     "\n",
-    "eq.solve_densities(0, 30, 1000)\n",
+    "eq.solve(0, 30, 1000)\n",
     "eq.graph('asd')"
    ],
    "id": "16cdee5c52248ae5",
@@ -30761,7 +30760,7 @@
     "    N=1000, M=100, lambda_= lambda t: 0.2, avg_k=5, mu = lambda t: 0.1, rr= lambda t: 0.05, rp=lambda t: 0.1,\n",
     ")\n",
     "\n",
-    "eq.solve_densities(0, 30, 10000)\n",
+    "eq.solve(0, 30, 10000)\n",
     "eq.solve_money()\n",
     "eq.graph('asd')"
    ],
@@ -31206,8 +31205,8 @@
     "\n",
     "interest_calculator2 = simulation.parameters_calculator.InterestCalculator(rp= lambda t: 0.15, rr= lambda t: 0.05)\n",
     "\n",
-    "eq = DifferentialEquations2(N=10000, M=100, rp=interest_calculator.rp, rr=interest_calculator.rr, mu=lambda _:0.05, ponzi_capital=5000, lambda_ = lambda _: 0.02, avg_k=5)\n",
-    "eq.solve_densities(0, 30, 1000)\n",
+    "eq = DifferentialEquations(N=10000, M=100, rp=interest_calculator.rp, rr=interest_calculator.rr, mu=lambda _:0.05, ponzi_capital=5000, lambda_ = lambda _: 0.02, avg_k=5)\n",
+    "eq.solve(0, 30, 1000)\n",
     "eq.graph('asd')\n",
     "# ponzi = PonziSimulation(\n",
     "#     network=net2,\n",
@@ -31285,7 +31284,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from differential_equations_2 import DifferentialEquations2\n",
+    "from simulation.differential_equations import DifferentialEquations\n",
     "from simulation.parameters_calculator import InterestCalculator\n",
     "from simulation.finance_data import FinanceData\n",
     "data = FinanceData()\n",
@@ -31294,13 +31293,13 @@
     "\n",
     "interest_calculator2.compute_market_positivity(0, 30, 100)\n",
     "\n",
-    "eq = DifferentialEquations2(\n",
+    "eq = DifferentialEquations(\n",
     "    N=1000, M=100,\n",
     "    lambda_= lambda ti: interest_calculator2.lambda_from_rr_func(base=0.1, min=0, max=0.1, steepness=30)(ti) + 0.1, avg_k=5,\n",
     "    mu =interest_calculator2.mu_from_rr_func(0.2, 0.1, 0.6, 150), rr=interest_calculator2.rr, rp=lambda t: 0.1, ponzi_capital=0\n",
     ")\n",
     "\n",
-    "eq.solve_densities(0, 30, 100)\n",
+    "eq.solve(0, 30, 100)\n",
     "eq.graph('asd')"
    ],
    "id": "85ba1904d95dff90",
