--- a/test.ipynb
+++ b/test.ipynb
@@ -159,9 +159,9 @@
    },
    "cell_type": "code",
    "source": [
-    "from differential_equations_2 import DifferentialEquations2\n",
+    "from simulation.differential_equations import DifferentialEquations\n",
     "\n",
-    "diff = DifferentialEquations2(\n",
+    "diff = DifferentialEquations(\n",
     "    rp = interest_calculator.rp,\n",
     "    rr = interest_calculator.rr,\n",
     "    lambda_ = lambda t: 0.2,\n",
@@ -170,7 +170,7 @@
     "    ponzi_capital = 5000,\n",
     "    N=10000, avg_k=5)\n",
     "\n",
-    "diff.solve_densities(0, 30, 1000)\n",
+    "diff.solve(0, 30, 1000)\n",
     "\n",
     "diff.graph('asd')\n"
    ],
