Sistemato critical_lambda.ipynb.

--- a/pde.ipynb
+++ b/pde.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "\n",
     "def rr(t):\n",
-    "    return dat.interpolated_r_r(t) * 12\n",
+    "    return dat.market_rr(t) * 12\n",
     "    #return 0.05\n",
     "\n",
     "def rp(t):\n",
