--- a/pde_calculator.ipynb
+++ b/pde_calculator.ipynb
@@ -30813,7 +30813,7 @@
     "    'capital_per_person': 0\n",
     "}\n",
     "#net2.set_parameters(parameters)\n",
-    "interest_calculator = simulation.parameters_calculator.InterestCalculator(rp= lambda t: 0.1, rr= lambda t: 0.05)\n",
+    "interest_calculator = simulation.parameters_calculator.ParameterCalculator(rp= lambda t: 0.1, rr= lambda t: 0.05)\n",
     "\n"
    ],
    "id": "4ae23d849f067465",
@@ -30912,7 +30912,7 @@
     "data = FinanceData()\n",
     "data.download()\n",
     "\n",
-    "interest_calc_sp500 = simulation.parameters_calculator.InterestCalculator(rp= lambda t: 0.1, rr=lambda t: data.interpolated_r_r(t) * 12)\n",
+    "interest_calc_sp500 = simulation.parameters_calculator.ParameterCalculator(rp= lambda t: 0.1, rr=lambda t: data.market_rr(t) * 12)\n",
     "\n",
     "interest_calc_sp500.compute_market_positivity(0, 30, 100)\n",
     "\n",
@@ -31101,7 +31101,7 @@
     "\n",
     "net2 = WattsStrogatzNetwork.load_json('my_networks/er.json')\n",
     "\n",
-    "interest_calculator = simulation.parameters_calculator.InterestCalculator(rp= lambda t: 0.1, rr= data.interpolated_r_r)\n",
+    "interest_calculator = simulation.parameters_calculator.ParameterCalculator(rp= lambda t: 0.1, rr= data.market_rr)\n",
     "\n",
     "ponzi = PonziSimulation(\n",
     "    network=net2,\n",
@@ -31203,7 +31203,7 @@
     "\n",
     "#net2 = BaNetwork.load_json('my_networks/ba1.json')\n",
     "\n",
-    "interest_calculator2 = simulation.parameters_calculator.InterestCalculator(rp= lambda t: 0.15, rr= lambda t: 0.05)\n",
+    "interest_calculator2 = simulation.parameters_calculator.ParameterCalculator(rp= lambda t: 0.15, rr= lambda t: 0.05)\n",
     "\n",
     "eq = DifferentialEquations(N=10000, M=100, rp=interest_calculator.rp, rr=interest_calculator.rr, mu=lambda _:0.05, ponzi_capital=5000, lambda_ = lambda _: 0.02, avg_k=5)\n",
     "eq.solve(0, 30, 1000)\n",
@@ -31285,11 +31285,11 @@
    "cell_type": "code",
    "source": [
     "from simulation.differential_equations import DifferentialEquations\n",
-    "from simulation.parameters_calculator import InterestCalculator\n",
+    "from simulation.parameters_calculator import ParameterCalculator\n",
     "from simulation.finance_data import FinanceData\n",
     "data = FinanceData()\n",
     "data.download()\n",
-    "interest_calculator2 = InterestCalculator(rp=lambda _: 0.1, rr=data.interpolated_r_r)\n",
+    "interest_calculator2 = ParameterCalculator(rp=lambda _: 0.1, rr=data.market_rr)\n",
     "\n",
     "interest_calculator2.compute_market_positivity(0, 30, 100)\n",
     "\n",
