--- a/test.ipynb
+++ b/test.ipynb
@@ -12,7 +12,7 @@
    },
    "source": [
     "\n",
-    "from simulation.parameters_calculator import InterestCalculator\n",
+    "from simulation.parameters_calculator import ParameterCalculator\n",
     "from networks.er_network import ErNetwork\n",
     "import matplotlib.pyplot as plt\n",
     "from simulation.ponzi_simulation import PonziSimulation"
@@ -87,7 +87,7 @@
    },
    "cell_type": "code",
    "source": [
-    "interest_calculator = InterestCalculator(rp= lambda t: 0.1, rr= lambda t: 0.05)\n",
+    "interest_calculator = ParameterCalculator(rp= lambda t: 0.1, rr= lambda t: 0.05)\n",
     "\n",
     "ponzi = PonziSimulation(\n",
     "    network = erNet,\n",
@@ -226,7 +226,7 @@
    "cell_type": "code",
    "source": [
     "from simulation.finance_data import FinanceData\n",
-    "from simulation.parameters_calculator import InterestCalculator\n",
+    "from simulation.parameters_calculator import ParameterCalculator\n",
     "from networks.er_network import ErNetwork\n",
     "from simulation.ponzi_simulation import PonziSimulation\n",
     "\n",
@@ -234,7 +234,7 @@
     "data = FinanceData()\n",
     "data.download()\n",
     "\n",
-    "interest_calculator = InterestCalculator(rp= lambda t: 0.25, rr= data.interpolated_r_r) #data.interpolated_r_r)\n",
+    "interest_calculator = ParameterCalculator(rp= lambda t: 0.25, rr= data.market_rr) #data.interpolated_r_r)\n",
     "interest_calculator.compute_market_positivity(0, 30, 200)\n",
     "\n",
     "ponzi = PonziSimulation(\n",
