Exact mean field.

--- a/pde.ipynb
+++ b/pde.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "# Secondo asse y per S(t)\n",
     "ax2 = ax1.twinx()\n",
-    "ax2.plot(t, S_values, label='Capitale Totale S(t)', color='black', linestyle='dashed')\n",
+    "ax2.ba_plot(t, S_values, label='Capitale Totale S(t)', color='black', linestyle='dashed')\n",
     "ax2.set_ylabel('Capitale Totale')\n",
     "ax2.legend(loc='upper right')\n",
     "\n",
