--- a/old_controlled_systems/critical_lambda.ipynb
+++ b/old_controlled_systems/critical_lambda.ipynb
@@ -24,7 +24,10 @@
     }
    },
    "cell_type": "code",
-   "source": "networks_to_test = [('eq', 'Equazioni Differenziali'), (lambda: ErNetwork.load_json('my_networks/er1.json'), 'Network ER'),  (lambda: BaNetwork.load_json('my_networks/ba1.json'), 'Network BA'), (lambda: WsNetwork.load_json('my_networks/ws1.json'), 'Network WS')]",
+   "source": [
+    "networks_to_test = [('eq', 'Equazioni Differenziali'), (lambda: ErNetwork.load_json('../my_networks/er1.json'), 'Network ER'), (lambda: BaNetwork.load_json(\n",
+    "    '../my_networks/ba1.json'), 'Network BA'), (lambda: WsNetwork.load_json('../my_networks/ws1.json'), 'Network WS')]"
+   ],
    "id": "f02d93360a474759",
    "outputs": [],
    "execution_count": 2
