Aggiunto README.md

--- a/node_degrees.ipynb
+++ b/node_degrees.ipynb
@@ -75,15 +75,12 @@
     "    plt.xlabel(f'$k$')\n",
     "    plt.ylabel(\"Occorrenze\")\n",
     "    plt.title(f'Distribuzione gradi rete {name}')\n",
-    "    if i == 0:\n",
-    "        # Overlay the Poisson distribution for comparison\n",
-    "        avg_k = 6  # Average degree for the Poisson distribution\n",
-    "        k_values = np.arange(0, 20)  # Range of k values for the Poisson distribution\n",
-    "        poisson_dist = stats.poisson.pmf(k_values, avg_k)  # Poisson distribution for avg_k = 6\n",
+    "    if i == 0: # mostra la distr. di Poisson per ER\n",
+    "        avg_k = 6\n",
+    "        k_values = np.arange(0, 20)\n",
+    "        poisson_dist = stats.poisson.pmf(k_values, avg_k)\n",
     "        plt.plot(k_values, poisson_dist, 'r-', label='Poisson Distr.')\n",
     "\n",
-    "        # Labels and title\n",
-    "        # Display and save the plot\n",
     "    plt.legend()\n",
     "    plt.tight_layout()\n",
     "    plt.savefig(f'imgs/gradi/grado_rete_{i}.png')\n",
