--- a/old_controlled_systems/pde_calculator.ipynb
+++ b/old_controlled_systems/pde_calculator.ipynb
@@ -30801,7 +30801,7 @@
    },
    "cell_type": "code",
    "source": [
-    "net2 = BaNetwork.load_json('my_networks/ba1.json')\n",
+    "net2 = BaNetwork.load_json('../my_networks/ba1.json')\n",
     "\n",
     "parameters = {\n",
     "    #'m0': 2,\n",
@@ -30990,7 +30990,7 @@
    },
    "cell_type": "code",
    "source": [
-    "net2 = BaNetwork.load_json('my_networks/ba1.json')\n",
+    "net2 = BaNetwork.load_json('../my_networks/ba1.json')\n",
     "\n",
     "parameters = {\n",
     "    #'m0': 2,\n",
